--- a/index.html
+++ b/index.html
@@ -46,3 +46,152 @@
     </body>
 
 </html>
+* {
+    margin: 0;
+}
+h1 {
+    display: none;
+}
+
+.page-container {
+    position: relative;
+    min-height: 100%;
+}
+
+a {
+    list-style-type: none;
+    margin: 0px 15px 0px 0px;
+    padding: 0px;
+    text-decoration: none;
+    color: #3F3F3F;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 500;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+li {
+    display: inline;
+}
+
+.nav:hover {
+    text-decoration: underline;
+}
+
+.notbutton {
+    display: inline-block;
+    padding-left: 15px;
+    padding-top: 10px;
+    padding-right: 10px;
+    margin-top: 10px;
+}
+
+.notbutton:hover {
+    text-decoration: underline;
+}
+
+.button {
+    background: #4285F4;
+    color: white;
+    border-radius: 5px;
+    padding: 5px 10px 5px 8px;
+    margin-top: 15px;
+    margin-right: 30px;
+}
+
+.button:hover {
+    transform: scale(1.1);
+    text-decoration: none;
+}
+
+
+#google-logo {
+    background-image: url(https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png);
+    position: absolute;
+    height: 92px;
+    width: 272px;
+    left: calc(50% - 272px/2);
+    top: 170px;
+}
+
+.search-wrappper {
+    position: relative;
+}
+
+#searchbar {
+    position: absolute;
+    width: 561px;
+    height: 44px;
+    top: 290px;
+    margin: 0 calc(50% - 473px);
+    border-radius: 40px;
+    border-color: #DFE1E5;
+    border-style: solid;
+    border-width: thin;
+}
+
+#searchbar:hover {
+    box-shadow: 0px 0px 5px #BFBFBF;
+}
+
+.search-text {
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: 570;
+    background: none;
+    outline: none;
+}
+
+.microphone {
+    width: 14px;
+    height: 21px;
+    top: 0px;
+    left: 0px;
+}
+
+.bar-button {
+    position: absolute;
+    left: calc(50% - 272px/2);
+    top: 370px;
+}
+
+input {
+    border: none;
+    padding: 11px 8px;
+    border-radius: 5px;
+    background-color: #F2F2F2;
+    color: #5F6368;
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+}
+
+input[type=submit]:hover {
+    border: solid;
+    border-color: #9C9C9C;
+    border-width: 1px;
+    cursor: pointer;
+}
+
+#footer {
+    position: fixed;
+    background-color: #F2F2F2;
+    width: 100%;
+    bottom: 0;
+    height: 40px;
+}
+
+.footer {
+    margin-top: 10px;
+    margin-right: 40px;
+}
+
+.footer-text {
+    font-size: 14px;
+    padding-left: 27px;
+}
+
+.footer-text:hover {
+    text-decoration: underline;
+}
